--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,13 @@ body {
   padding: 0;
   width: 100vw;
   height: 100vh;
+  background-color: #223362;
 }
 
 model-viewer {
   width: 100%;
   height: 90%;
-  background-color: #ffffff;
+  background-color: unset;
 }
 
 #controls {
