--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ model-viewer {
   background-repeat: no-repeat;
   background-size: 20px 20px;
   background-position: 12px 50%;
-  background-color: #fff;
+  background-color: none;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -88,7 +88,7 @@ model-viewer {
   padding: 0px 16px 0px 40px;
   font-family: Roboto Regular, Helvetica Neue, sans-serif;
   font-size: 14px;
-  color:#4285f4;
+  color:#fff;
   height: 36px;
   line-height: 36px;
   border-radius: 18px;
