--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ model-viewer {
   background-repeat: no-repeat;
   background-size: 20px 20px;
   background-position: 12px 50%;
-  background-color: none;
+  background-color: transparent;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -91,8 +91,8 @@ model-viewer {
   color:#fff;
   height: 36px;
   line-height: 36px;
-  border-radius: 18px;
-  border: 1px solid #DADCE0;
+  border-radius: 0;
+  border: 1px solid #ffffff;
 }
 
 #ar-button:active {
