--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,8 @@ model-viewer {
     transform: translate(-50%, 0);
     -ms-transform: translate(-50%, 0);
     -webkit-transform: translate(-50%, 0);
+    width: 100px;
+    margin-top: 15px;
 }
 
 .dim{
