--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ model-viewer {
     -ms-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
+    max-width: 300px;
 }
 
 .cwm-frame-responsive {
@@ -71,6 +72,7 @@ model-viewer {
     -ms-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
+    max-width: 300px;
 }
 
 .dim{
