--- a/styles.css
+++ b/styles.css
@@ -75,11 +75,13 @@ model-viewer {
     max-width: 300px;
 }
 
+.cwm-frame-responsive {
+    max-width: 240px;
+}
+
 .dim{
-    background: #fff;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-    color: rgba(0, 0, 0, 0.8);
+    background: rgba(255, 255, 255, 0);
+    color: rgba(255, 255, 255, 1);
     display: block;
     font-family: Futura, Helvetica Neue, sans-serif;
     font-size: 12px;
