--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ model-viewer {
     display: block;
     font-family: Futura, Helvetica Neue, sans-serif;
     font-size: 9px;
-    font-weight: 700;
+    /*font-weight: 700;*/
     max-width: 128px;
     overflow-wrap: break-word;
     padding: 0.5em 1em;
