--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@ body {
   background-color: #223362;
 }
 
+@font-face {
+  font-family: "IBM Plex Mono";
+  src: url("Assets/ibm-plex-mono.bold.ttf");
+}
+
 model-viewer {
   width: 100%;
   height: 60%;
