--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ model-viewer {
   white-space: nowrap;
   bottom: 16px;
   padding: 0px 16px 0px 40px;
-  font-family: Roboto Regular, Helvetica Neue, sans-serif;
+  font-family: IBM Plex Mono, Helvetica Neue, sans-serif;
   font-size: 14px;
   color:#fff;
   height: 36px;
