--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,17 @@ model-viewer {
 
 }
 
+.main_container {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 806px) {
+  .main_container {
+  display: flex;
+  flex-direction: row;
+  }
+}
 
 .cwm-logo-responsive {
     position: relative;
