--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 
 model-viewer {
   width: 100%;
-  height: 60%;
+ /* height: 60%; */
   background-color: #223362;
   --poster-color: #ffffff00
 }
