--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 
 model-viewer {
   width: 100%;
- /* height: 60%; */
+  height: 60%;
   background-color: #223362;
   --poster-color: #ffffff00
 }
@@ -34,17 +34,6 @@ model-viewer {
 
 }
 
-.main_container {
-  display: flex;
-  flex-direction: column;
-}
-
-@media screen and (min-width: 806px) {
-  .main_container {
-  display: flex;
-  flex-direction: row;
-  }
-}
 
 .cwm-logo-responsive {
     position: relative;
